@@ -468,6 +468,9 @@ Release 2.1.0-beta - UNRELEASED
     YARN-760. NodeManager throws AvroRuntimeException on failed start.
     (Niranjan Singh via jlowe)
 
+    YARN-767. Initialize application metrics at RM bootup. (Jian He via
+    acmurthy) 
+
   BREAKDOWN OF HADOOP-8562 SUBTASKS AND RELATED JIRAS
 
     YARN-158. Yarn creating package-info.java must not depend on sh.
